# discogsography

./: .coveragerc.api  .coveragerc.brainzgraphinator  .coveragerc.brainztableinator  .coveragerc.common  .coveragerc.curator  .coveragerc.dashboard  .coveragerc.digger  .coveragerc.explore  .coveragerc.graphinator  .coveragerc.insights  .coveragerc.mcp-server  .coveragerc.schema-init  .coveragerc.tableinator  .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  .pip-audit-ignores  .pre-commit-config.yaml  .yamllint  CLAUDE.md  COVERAGE_REPORT_FINAL.md  Cargo.toml  DEPENDENCY_UPGRADE_SUMMARY.md  DOCKER_SECURITY.md  DOLT_REMOTE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_68_CHECKPOINT.md  LICENSE  PERFORMANCE_IMPROVEMENTS.md  README.md  __init__.py  codecov.yml  config.py  docker-compose.prod.yml  docker-compose.yml  docker-optimization-results.md  justfile  manifest  (+6 more)
api/: Dockerfile  README.md  __init__.py  admin_auth.py  admin_setup.py  api.py  app_tokens.py  audit_log.py  auth.py  cache.py  dependencies.py  limiter.py  metrics_collector.py  models.py  notifications.py  pyproject.toml  setup.py  snapshot_store.py  syncer.py  taste_card.py
api/digger_agent/: __init__.py  guardrails.py  memory.py  runtime.py
api/digger_refresh/: __init__.py  coordinator.py  input_builder.py
api/nlq/: __init__.py  actions.py  config.py  engine.py  suggestions.py  tools.py
api/queries/: __init__.py  admin_queries.py  collaborator_queries.py  credits_queries.py  digger_agent_queries.py  digger_proposals.py  digger_queries.py  digger_reports.py  gap_queries.py  genre_tree_queries.py  helpers.py  insights_neo4j_queries.py  insights_pg_queries.py  label_dna_queries.py  metrics_queries.py  musicbrainz_queries.py  neo4j_queries.py  network_queries.py  rarity_queries.py  recommend_queries.py  search_queries.py  similarity.py  taste_queries.py  user_queries.py
api/routers/: __init__.py  admin.py  app_tokens.py  auth.py  collection.py  credits.py  digger.py  digger_agent.py  digger_proposals.py  digger_recommend.py  digger_reports.py  explore.py  extraction_analysis.py  insights.py  insights_compute.py  internal_digger.py  label_dna.py  musicbrainz.py  network.py  nlq.py  rarity.py  recommend.py  search.py  snapshot.py  sync.py  taste.py  user.py
api/services/: __init__.py  discogs.py
brainzgraphinator/: Dockerfile  README.md  __init__.py  brainzgraphinator.py  pyproject.toml
brainztableinator/: Dockerfile  README.md  __init__.py  brainztableinator.py  pyproject.toml
collector/: Dockerfile  __init__.py  collector.py  pyproject.toml  syncer.py
common/: README.md  __init__.py  changes_consumer.py  config.py  credit_roles.py  data_normalizer.py  db_resilience.py  health_server.py  neo4j_resilient.py  oauth.py  postgres_resilient.py  processing_state.py  pyproject.toml  query_debug.py  rabbitmq_resilient.py  state_marker.py
common/agent_tools/: __init__.py  discovery.py  entities.py  graph.py  schemas.py  stats.py
common/digger_optimizer/: __init__.py  filtering.py  greedy.py  ilp.py  models.py  pareto.py  shipping.py
dashboard/: Dockerfile  README.md  __init__.py  admin_proxy.py  dashboard.py  pyproject.toml  tailwind.config.js  tailwind.input.css
dashboard/static/: admin.html  admin.js  dashboard.js  index.html  styles.css
digger/: Dockerfile  README.md  __init__.py  health.py  main.py  metrics.py  pyproject.toml
digger/digger/: __init__.py  main.py
digger/scheduler/: __init__.py  runner.py
digger/scraper/: __init__.py  _textutil.py  backoff.py  circuit_breaker.py  executor.py  http_client.py  listing_parser.py  orchestrator.py  queue_runner.py  rate_budget.py  seller_parser.py  state_recomputer.py  types.py
discovery/: .dockerignore  Dockerfile  PHASE_4_COMPLETION.md  PHASE_4_PLAN.md  PHASE_4_PROGRESS.md  README.md  __init__.py  ab_testing.py  analytics.py  api_graph.py  api_ml.py  api_realtime.py  api_search.py  cache.py  cache_invalidation.py  centrality_metrics.py  collaboration.py  collaborative_filtering.py  community_detection.py  constraints.txt  content_based.py  db_metrics.py  db_pool_metrics.py  discovery.py  examples.md  explainability.py  export_model_to_onnx.py  faceted_search.py  fulltext_search.py  genre_evolution.py  graph_explorer.py  hybrid_recommender.py  metrics.py  middleware.py  neo4j_indexes.py  onnx_sentence_transformer.py  pagination.py  playground.md  playground_api.py  pyproject.toml  (+9 more)
discovery/static/: index.html
explore/: Dockerfile  README.md  __init__.py  explore.py  models.py  neo4j_indexes.py  neo4j_queries.py  package-lock.json  package.json  pyproject.toml  snapshot_store.py  tailwind.config.js  tailwind.input.css  user_queries.py  vitest.config.js  vitest.setup.js
explore/__tests__/: api-client-nlq-suggestions.test.js  api-client.test.js  app.test.js  auth.test.js  autocomplete.test.js  collaborators.test.js  credits.test.js  digger-chat.test.js  digger-reports.test.js  digger.test.js  genre-tree.test.js  graph-snapshot.test.js  graph.test.js  helpers.js  importmap-coverage.test.js  insights.test.js  nlq-action-applier.test.js  nlq-handlers.test.js  nlq-init.test.js  nlq-markdown.test.js  nlq-orchestrator.test.js  nlq-pill.test.js  nlq-suggestions.test.js  nlq-summary-strip.test.js  nlq.test.js  no-legacy-nlq-navbar.test.js  (+7 more)
extractor/: .clippy.toml  Cargo.toml  Dockerfile  README.md  __init__.py  deny.toml  discogs.py  extraction-rules.yaml  extractor.py  incremental_extractor.py  pyproject.toml  requirements.txt  rustfmt.toml
graphinator/: Dockerfile  README.md  __init__.py  batch_processor.py  graphinator.py  pyproject.toml  requirements.txt
insights/: Dockerfile  README.md  __init__.py  cache.py  computations.py  insights.py  models.py  pyproject.toml
investigations/: .gitignore  README.md  __init__.py  pyproject.toml  run.sh
mcp-server/: README.md  pyproject.toml
schema-init/: Dockerfile  README.md  digger_schema.py  neo4j_schema.py  postgres_schema.py  pyproject.toml  schema_init.py
tableinator/: Dockerfile  README.md  __init__.py  batch_processor.py  pyproject.toml  requirements.txt  tableinator.py
(+811 files in other folders)
