[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography"
version = "0.1.0"
description = "Using the discogs database export for local graph exploration"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
# readme = "README.md"  # Commented out to avoid Docker build issues
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    # Core dependencies used across services
    "aio-pika>=9.6.2",
    "dict-hash>=1.3.7",
    "multidict>=6.7.1",
    "neo4j-rust-ext>=6.1.0",
    "orjson>=3.11.8",
    "pika>=1.3.2",
    "psycopg[binary]>=3.3.3",
    "redis[hiredis]>=7.4.0",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.94.1",
    "brevo-python>=4.0.10",
    "cryptography>=46.0.7",
    "defusedxml>=0.7.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "neo4j-rust-ext>=6.1.0",
    "orjson>=3.11.8",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.0",
    "pyotp>=2.9.0",
    "pyyaml>=6.0.3",
    "redis[hiredis]>=7.4.0",
    "slowapi>=0.1.9",
    "sse-starlette>=3.3.4",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]
dashboard = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "neo4j-rust-ext>=6.1.0",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]
brainzgraphinator = [
    "neo4j-rust-ext>=6.1.0",
]
graphinator = [
    "neo4j-rust-ext>=6.1.0",
]
insights = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.44.0",
]
tableinator = [
    "psycopg[binary]>=3.3.3",
]
brainztableinator = [
    "psycopg[binary]>=3.3.3",
]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.1",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.2",
    "pytest-timeout>=2.4.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
    "types-defusedxml>=0.7.0.20260408",
    "types-psutil>=7.2.2.20260408",
    "types-pyyaml>=6.0.12.20260408",
    "types-tqdm>=4.67.3.20260408",
]
utilities = [
    "psutil>=7.2.2",
    "requests>=2.33.1",
]
explore = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "orjson>=3.11.8",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]
schema-init = [
    "neo4j-rust-ext>=6.1.0",
    "psycopg[binary]>=3.3.3",
    "structlog>=25.5.0",
]
mcp-server = [
    "mcp[cli]>=1.27.0",
    "structlog>=25.5.0",
]
all = [
    "discogsography[api,brainzgraphinator,brainztableinator,dashboard,explore,graphinator,insights,mcp-server,schema-init,tableinator,dev,utilities]",
]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # pylint conventions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # bandit security rules
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements)
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "W191", # indentation contains tabs (explicit tab detection)
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E501",  # line too long, handled by ruff format
    "S101",  # use of assert detected (allow assert statements)
]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["api", "brainzgraphinator", "brainztableinator", "common", "dashboard", "explore", "graphinator", "mcp_server", "neo4j_schema", "postgres_schema", "schema_init", "tableinator"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/api.py" = ["T201"]                       # Allow print statements for ASCII art
"*/dashboard.py" = ["T201"]                 # Allow print statements for ASCII art
"*/explore.py" = ["T201"]                   # Allow print statements for ASCII art
"*/brainzgraphinator.py" = ["T201"]          # Allow print statements for ASCII art
"*/graphinator.py" = ["T201"]               # Allow print statements for ASCII art
"*/insights.py" = ["T201"]                  # Allow print statements for ASCII art
"*/schema_init.py" = ["T201"]               # Allow print statements for ASCII art
"*/server.py" = ["T201"]                    # Allow print statements for ASCII art
"*/brainztableinator.py" = ["T201"]          # Allow print statements for ASCII art
"*/tableinator.py" = ["T201"]               # Allow print statements for ASCII art
"api/admin_setup.py" = ["T201"]              # CLI tool uses print for user output
"api/setup.py" = ["T201"]                   # CLI tool uses print for user output
"utilities/*.py" = ["T201"]                 # Utility scripts use print for output
"scripts/*.py" = ["T201", "S108"]           # CLI scripts use print for user output and may use /tmp
"tests/**/*.py" = ["PLC", "S105", "T201"]   # Test files: pylint conventions, hardcoded passwords, print statements
"*/queries/search_queries.py" = ["S608"]    # SQL uses parameterized %s for all user input; interpolated values are internal constants
"*/queries/metrics_queries.py" = ["S608"]   # date_trunc unit from internal GRANULARITY_MAP, not user input

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
# Exclude test files from type checking
exclude = "^tests/"

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "pika.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false


[tool.coverage.run]
source = ["api", "brainzgraphinator", "brainztableinator", "common", "dashboard", "explore", "graphinator", "insights", "mcp-server", "schema-init", "tableinator"]
omit = ["*/tests/*", "*/__init__.py"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short -n auto --dist loadfile"
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [".", "api", "insights", "mcp-server", "schema-init"]
timeout = 60
timeout_method = "thread"
markers = [
    "e2e: End-to-end tests requiring external services (deselect with '-m \"not e2e\"')",
]

# Package discovery for multi-service setup
[tool.hatch.build.targets.wheel]
packages = ["common"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.1",
    "pip-audit>=2.10.0",                   # Python dependency vulnerability scanning
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-tqdm>=4.67.3.20260408",
    "types-xmltodict>=1.0.1.20260408",
    "types-psutil>=7.2.2.20260408",
    "pytest-timeout>=2.4.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    # "mdformat-tables>=1.0.0",  # Disabled: requires mdformat<0.8.0
    "pytest-xdist>=3.8.0",
    "fakeredis>=2.35.1",
    "pillow>=12.2.0",
]

[tool.mdformat]
wrap = "no"  # Don't wrap lines
number = false  # Don't number headings
end_of_line = "lf"  # Use Unix line endings

[tool.bandit]
exclude_dirs = [".venv", "tests", "venv", "*/.venv/*", "*/venv/*"]
skips = ["B101", "B108", "B608"]  # Skip assert_used, hardcoded temp directory, and SQL construction (parameterized queries used for all user input)

# uv workspace configuration
[tool.uv.workspace]
members = ["api", "brainzgraphinator", "brainztableinator", "common", "dashboard", "explore", "graphinator", "insights", "mcp-server", "schema-init", "tableinator"]

# Environment restrictions for uv to avoid iOS and other incompatible platforms
[tool.uv]
environments = [
    # Only support Linux platforms that we build for in CI/CD
    "sys_platform == 'linux' and platform_machine == 'x86_64'",   # linux/amd64
    "sys_platform == 'linux' and platform_machine == 'aarch64'",  # linux/arm64
    # Also support local development on macOS
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",  # macOS Intel
    "sys_platform == 'darwin' and platform_machine == 'arm64'",   # macOS Apple Silicon
]
