[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-api"
version = "0.1.0"
description = "API service for user authentication and Discogs OAuth integration for Discogsography"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "PolyForm-Noncommercial-1.0.0"}
dependencies = [
    "anthropic>=0.104.0",
    "brevo-python>=4.0.10",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "neo4j-rust-ext>=6.2.0.0",
    "orjson>=3.11.9",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyotp>=2.9.0",
    "redis[hiredis]>=7.4.0",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
api = "api.api:main"
discogs-setup = "api.setup:main"
admin-setup = "api.admin_setup:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Tool configurations inherit from root pyproject.toml
