[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-brainzgraphinator"
version = "0.1.0"
description = "MusicBrainz data consumer — enriches Neo4j knowledge graph"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    "aio-pika>=9.0.0",
    "neo4j-rust-ext>=6.1.0",
    "orjson>=3.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
brainzgraphinator = "brainzgraphinator:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Tool configurations inherit from root pyproject.toml
# Only service-specific overrides are defined here

[tool.ruff.lint.per-file-ignores]
"brainzgraphinator.py" = ["T201"]    # Allow print statements for ASCII art

[[tool.mypy.overrides]]
module = [
    "aio_pika.*",
    "neo4j.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["brainzgraphinator"]

[tool.pytest.ini_options]
testpaths = ["../tests/brainzgraphinator"]
