[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-common"
version = "0.1.0"
description = "Common utilities and configuration for discogsography services"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    "aio-pika>=9.0.0",
    "neo4j>=5.0.0",
    "pika>=1.3.0",
    "psycopg[binary]>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
