[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-common"
version = "0.1.0"
description = "Common utilities and configuration for discogsography services"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "PolyForm-Noncommercial-1.0.0"}
dependencies = [
    "aio-pika>=10.0.1",
    "neo4j-rust-ext>=6.2.0.0",
    "pika>=1.4.1",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "pulp>=3.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
