[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-dashboard"
version = "0.1.0"
description = "Dashboard for monitoring discogsography services"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    "aio-pika>=9.6.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "neo4j-rust-ext>=6.1.0",
    "orjson>=3.11.8",
    "pika>=1.3.2",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[project.scripts]
dashboard = "dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
