[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-dashboard"
version = "0.1.0"
description = "Dashboard for monitoring discogsography services"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "PolyForm-Noncommercial-1.0.0"}
dependencies = [
    "aio-pika>=9.6.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "neo4j-rust-ext>=6.2.0.0",
    "orjson>=3.11.9",
    "pika>=1.4.0",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]

[project.scripts]
dashboard = "dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
